# telepathy-cauchy

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
data/: Makefile.am  cauchy.manager  matrix.manager  org.freedesktop.Telepathy.ConnectionManager.cauchy.service.in  org.freedesktop.Telepathy.ConnectionManager.matrix.service.in
src/: Makefile.am  cauchy-connection-manager.c  cauchy-connection-manager.h  cauchy-connection-manager.vala  cauchy-connection.c  cauchy-connection.h  cauchy-contact-info.c  cauchy-contact-info.h  cauchy-debug.c  cauchy-debug.h  cauchy-handles.c  cauchy-handles.h  cauchy-im-manager.c  cauchy-im-manager.h  cauchy-muc-manager.c  cauchy-muc-manager.h  cauchy-protocol.c  cauchy-protocol.h  cauchy-protocol.vala  cauchy.c  matrix-connection-manager.c  matrix-connection-manager.h  matrix-connection.c  matrix-connection.h  matrix-contact-info.c  matrix-contact-info.h  matrix-debug.c  matrix-debug.h  matrix-handles.c  matrix-handles.h  matrix-im-manager.c  matrix-im-manager.h  matrix-muc-manager.c  matrix-muc-manager.h  matrix-protocol.c  matrix-protocol.h  matrix.c  telepathy-cauchy.8.in  telepathy-matrix.8.in  tp-base.vapi
tools/: Makefile.am
